--- a/platform-admin/src/main/resources/dev/platform.properties
+++ b/platform-admin/src/main/resources/dev/platform.properties
@@ -1,6 +1,6 @@
-jdbc.url=jdbc:mysql://localhost/platform-shop?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://47.110.60.5/platform-shop?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=zcc123
 
 jdbc.initialSize=5
 jdbc.maxActive=30
