--- a/wx-mall/project.config.json
+++ b/wx-mall/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.0",
-	"appid": "wx11ed3e37387289b8",
+	"appid": "wx0464c6f7c262a6b5",
 	"projectname": "wxshop",
 	"condition": {
 		"search": {
