--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <server.port>8080</server.port>
+        <server.url>http://localhost/manager/text</server.url>
         <java-version>1.8</java-version>
         <servlet-version>3.1.0</servlet-version>
         <junit-version>4.12</junit-version>
@@ -329,6 +330,8 @@
                     <path>/platform</path>
                     <charset>${project.build.sourceEncoding}</charset>
                     <port>${server.port}</port>
+                    <url>${server.url}</url>
+                    <server>tomcat</server>
                     <uriEncoding>${project.build.sourceEncoding}</uriEncoding>
                 </configuration>
             </plugin>
